tests/pass/imports/foo_bar.yp
import "./foo.yp"
import "./bar.yp"

fn foo_bar(){}