tests/fail/missing_file_import/test.yp
import "./this_file_does_not_exist.yp"

fn main() {}
